--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build -release 
+      run: cargo build --release 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
