--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "simple_pixiv"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+strip = true 
+lto = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
