--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
-         rustup target add x86_64-unknown-linux-musl
-         cargo build --release --target x86_64-unknown-linux-musl
+          alias rust-musl-builder='docker run --rm -it -v "$(pwd)":/home/rust/src ekidd/rust-musl-builder'
+          rust-musl-builder cargo build --release --target x86_64-unknown-linux-musl
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
