--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
-          docker run --rm -v "$(pwd)":/home/rust/src ekidd/rust-musl-builder cargo build --release --target x86_64-unknown-linux-musl
+           rustup target add x86_64-unknown-linux-musl
+           CC=x86_64-linux-musl-gcc cargo build --release --target=x86_64-unknown-linux-musl
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
