--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
-           rustup target add x86_64-unknown-linux-musl
-           CC=x86_64-linux-musl-gcc cargo build --release --target=x86_64-unknown-linux-musl
+            docker run --rm -v "$(pwd)":/home/rust/src messense/rust-musl-cross:x86_64-musl cargo build --release --target=x86_64-unknown-linux-musl
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
