--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
-            docker run --rm -v "$(pwd)":/home/rust/src messense/rust-musl-cross:x86_64-musl cargo build --release
+            docker run --rm -v "$(pwd)":/home/rust/src messense/rust-musl-cross:x86_64-musl cargo build --release --target x86_64-unknown-linux-musl
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
         name: linux
-        path: target/release/simple_pixiv
+        path: target/x86_64-unknown-linux-musl/simple_pixiv
