--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ askama = "0.11.1"
 awc = {version="3.0.0",features=["rustls"]}
 serde_json = "1.0.81"
 serde = "1.0.137"
+cached = "0.34.1"
 # async-stream = "0.3.3"
 
 [build-dependencies]
