--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: Swatinem/rust-cache@v1
+    - name: install musl
+      run: |
+        rustup target add x86_64-unknown-linux-musl
+        apt update && apt install -y musl-tools musl-dev
+        update-ca-certificates
     - name: Build
       run: |
-            docker run --rm -v "$(pwd)":/home/rust/src messense/rust-musl-cross:x86_64-musl cargo build --release --target x86_64-unknown-linux-musl
+        cargo build --release --target x86_64-unknown-linux-musl
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
