--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,8 @@ jobs:
     - name: install musl
       run: |
         rustup target add x86_64-unknown-linux-musl
-        apt update && apt install -y musl-tools musl-dev
+        sudo apt update && apt install -y musl-tools musl-dev
+        sudo update-ca-certificates
     - name: Build
       run: |
         cargo build --release --target x86_64-unknown-linux-musl
