--- a/simple_pixiv/Cargo.toml
+++ b/simple_pixiv/Cargo.toml
@@ -23,6 +23,7 @@ once_cell = "1.12.0"
 async-stream = "0.3.3"
 futures = "0.3"
 futures-core = "0.3.21"
+filetime = "0.2"
 
 [build-dependencies]
 askama = "0.11.1"
