--- a/simple_pixiv/Cargo.toml
+++ b/simple_pixiv/Cargo.toml
@@ -24,6 +24,7 @@ async-stream = "0.3.3"
 futures = "0.3"
 futures-core = "0.3.21"
 filetime = "0.2"
+rand = "0.8.5"
 
 [build-dependencies]
 askama = "0.11.1"
