--- a/simple_pixiv/Cargo.toml
+++ b/simple_pixiv/Cargo.toml
@@ -19,12 +19,14 @@ awc = {version="3.0.0",features=["rustls"]}
 serde_json = "1.0.81"
 serde = "1.0.137"
 cached = "0.34.1"
-once_cell = "1.12.0"
+# once_cell = "1.12.0"
 async-stream = "0.3.3"
 futures = "0.3"
 futures-core = "0.3.21"
 filetime = "0.2"
 rand = "0.8.5"
+actix-files = "0.6.1"
+base64 = "0.13.0"
 
 [build-dependencies]
 askama = "0.11.1"
