--- a/simple_pixiv/Cargo.toml
+++ b/simple_pixiv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple_pixiv"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,13 +8,13 @@ edition = "2021"
 [dependencies]
 actix-web = {version="4.1.0"}
 log = "0.4.17"
-env_logger = "0.9.0"
+env_logger = "0.10.0"
 tokio = { version = "1.19.2", features = ["full"] }
 askama = "0.11.1"
 awc = {version="3.0.0",features=["rustls"]}
 serde_json = "1.0.81"
 serde = "1.0.137"
-cached = "0.34.1"
+cached = "0.42.0"
 # once_cell = "1.12.0"
 async-stream = "0.3.3"
 futures = "0.3"
@@ -22,7 +22,8 @@ futures-core = "0.3.21"
 filetime = "0.2"
 rand = "0.8.5"
 actix-files = "0.6.1"
-base64 = "0.13.0"
+base64 = "0.21.0"
+rusty-leveldb = "1.0.4"
 
 
 [build-dependencies]
